appleAuth apis
